--- a/.env.example
+++ b/.env.example
@@ -1,73 +1,53 @@
-# 서버 설정
+###############################
+# Auto E-Commerce Environment
+# Copy this file to `.env` and adjust values.
+###############################
+
+# --- Core Runtime ---
 NODE_ENV=development
-PORT=3000
-API_BASE_URL=http://localhost:3000
-
-# 데이터베이스 설정
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=auto_ecommerce
-DB_USER=postgres
-DB_PASS=password
-
-# Redis 설정
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-
-# JWT 설정
-JWT_SECRET=your-jwt-secret-key
-JWT_EXPIRES_IN=24h
-
-# NextAuth 설정
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret-key-min-32-characters-long
+NEXTAUTH_SECRET=change-me-min-32-characters
 
-# AWS S3 설정
+# --- Database ---
+DATABASE_URL=postgresql://postgres:password@localhost:5432/auto_ecommerce?schema=public
+
+# --- Logging ---
+LOG_LEVEL=info
+LOG_PRETTY=false
+
+# --- Redis / Queue (optional) ---
+REDIS_URL=redis://localhost:6379
+
+# --- Object Storage (optional) ---
 AWS_REGION=ap-northeast-2
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-S3_BUCKET_NAME=auto-ecommerce-images
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET=auto-ecommerce-assets
+CLOUDINARY_CLOUD_NAME=
 
-# 11번가 API 설정
-ELEVENST_API_KEY=your-11st-api-key
-ELEVENST_API_SECRET=your-11st-api-secret
+# --- Translation Providers (optional) ---
+GOOGLE_TRANSLATE_API_KEY=
+DEEPL_API_KEY=
+NAVER_CLIENT_ID=
+NAVER_CLIENT_SECRET=
+OPENAI_API_KEY=
+
+# --- Payment Providers (optional) ---
+TOSS_SECRET_KEY=
+TOSS_WEBHOOK_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# --- Marketplaces (optional) ---
+ELEVENST_API_KEY=
+ELEVENST_API_SECRET=
 ELEVENST_BASE_URL=https://openapi.11st.co.kr
-
-# 지마켓/옥션 ESM API 설정
-ESM_MASTER_ID=your-esm-master-id
-ESM_GMARKET_ID=your-gmarket-seller-id
-ESM_AUCTION_ID=your-auction-seller-id
-ESM_API_KEY=your-esm-api-key
-ESM_API_SECRET=your-esm-api-secret
-ESM_BASE_URL=https://etapi.gmarket.com
-
-# 쿠팡 API 설정
-COUPANG_ACCESS_KEY=your-coupang-access-key
-COUPANG_SECRET_KEY=your-coupang-secret-key
-COUPANG_VENDOR_ID=your-coupang-vendor-id
+COUPANG_ACCESS_KEY=
+COUPANG_SECRET_KEY=
+COUPANG_VENDOR_ID=
 COUPANG_BASE_URL=https://api-gateway.coupang.com
 
-# 네이버 커머스 API 설정
-NAVER_CLIENT_ID=your-naver-client-id
-NAVER_CLIENT_SECRET=your-naver-client-secret
-NAVER_CHANNEL_UID=your-naver-channel-uid
-NAVER_BASE_URL=https://api.commerce.naver.com
-
-# API Rate Limiting 설정
-DEFAULT_RATE_LIMIT_WINDOW_MS=60000
-DEFAULT_RATE_LIMIT_MAX_REQUESTS=100
-ELEVENST_RATE_LIMIT_MAX_REQUESTS=50
-ESM_RATE_LIMIT_MAX_REQUESTS=30
-COUPANG_RATE_LIMIT_MAX_REQUESTS=40
-NAVER_RATE_LIMIT_MAX_REQUESTS=60
-
-# 이미지 업로드 설정
-MAX_FILE_SIZE=5242880
-ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/webp
-IMAGE_RESIZE_WIDTH=1200
-IMAGE_RESIZE_HEIGHT=1200
-
-# 로깅 설정
-LOG_LEVEL=info
-LOG_FILE_PATH=./logs/app.log
+# --- Feature Flags & Defaults ---
+DEFAULT_MARGIN_RATE=0.2
+CUSTOM_KEY=
